v0.0.1/modules/schema/pages/class/GovGAST2.adoc
= `GovGAST2`
:toclevels: 4


+++Gas turbine.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovGAST2`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovGAST2`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
GovGAST2 {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



























































AsynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TurbineLoadControllerDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



SynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}
































GovGAST2 -> AsynchronousMachineDynamics: AsynchronousMachineDynamics


GovGAST2 -> TurbineLoadControllerDynamics: TurbineLoadControllerDynamics


GovGAST2 -> SynchronousMachineDynamics: SynchronousMachineDynamics


GovGAST2 -> DiagramObject: DiagramObjects


GovGAST2 -> InstanceSet: InstanceSet


GovGAST2 -> Name: Names


GovGAST2 -> ChangeSetMember: PropertiesCIMDataObject


GovGAST2 -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<a,`a`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Valve positioner (<i>A</i>).+++

| <<af1,`af1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Exhaust temperature parameter (<i>Af1</i>).  Unit = PU temperature.  Based on temperature in degrees C.+++

| <<af2,`af2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Coefficient equal to 0,5(1-speed) (<i>Af2</i>).+++

| <<b,`b`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Valve positioner (<i>B</i>).+++

| <<bf1,`bf1`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++(<i>Bf1</i>).  <i>Bf1</i> = <i>E</i>(1 - <i>W</i>) where <i>E</i> (speed sensitivity coefficient) is 0,55 to 0,65 x <i>Tr</i>.  Unit = PU temperature.  Based on temperature in degrees C.+++

| <<bf2,`bf2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Turbine torque coefficient K<sub>hhv</sub> (depends on heating value of fuel stream in combustion chamber) (<i>Bf2</i>).+++

| <<c,`c`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Valve positioner (<i>C</i>).+++

| <<cf2,`cf2`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Coefficient defining fuel flow where power output is 0% (<i>Cf2</i>).  Synchronous but no output.  Typically 0,23 x K<sub>hhv</sub> (23% fuel flow).+++

| <<ecr,`ecr`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Combustion reaction time delay (<i>Ecr</i>) (&gt;= 0).+++

| <<etd,`etd`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Turbine and exhaust delay (<i>Etd</i>) (&gt;= 0).+++

| <<k3,`k3`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Ratio of fuel adjustment (<i>K3</i>).+++

| <<k4,`k4`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Gain of radiation shield (<i>K4</i>).+++

| <<k5,`k5`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Gain of radiation shield (<i>K5</i>).+++

| <<k6,`k6`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum fuel flow (<i>K6</i>).+++

| <<kf,`kf`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Fuel system feedback (<i>Kf</i>).+++

| <<mwbase,`mwbase`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++

| <<t,`t`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Fuel control time constant (<i>T</i>) (&gt;= 0).+++

| <<t3,`t3`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Radiation shield time constant (<i>T3</i>) (&gt;= 0).+++

| <<t4,`t4`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Thermocouple time constant (<i>T4</i>) (&gt;= 0).+++

| <<t5,`t5`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Temperature control time constant (<i>T5</i>) (&gt;= 0).+++

| <<tc,`tc`>>
| 0..1
| xref::class/Temperature.adoc[`Temperature`]
| +++Temperature control (<i>Tc</i>).  Unit = °F or °C depending on parameters <i>Af1</i> and <i>Bf1</i>.+++

| <<tcd,`tcd`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Compressor discharge time constant (<i>Tcd</i>) (&gt;= 0).+++

| <<tf,`tf`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Fuel system time constant (<i>Tf</i>) (&gt;= 0).+++

| <<tmax,`tmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum turbine limit (<i>Tmax</i>) (&gt; GovGAST2.tmin).+++

| <<tmin,`tmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum turbine limit (<i>Tmin</i>) (&lt; GovGAST2.tmax).+++

| <<tr,`tr`>>
| 0..1
| xref::class/Temperature.adoc[`Temperature`]
| +++Rated temperature (<i>Tr</i>).  Unit = °C depending on parameters<i> Af1 </i>and <i>Bf1</i>.+++

| <<trate,`trate`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Turbine rating (<i>Trate</i>).  Unit = MW.+++

| <<tt,`tt`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Temperature controller integration rate (<i>Tt</i>) (&gt;= 0).+++

| <<w,`w`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Governor gain (1/droop) on turbine rating (<i>W</i>).+++

| <<x,`x`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Governor lead time constant (<i>X</i>) (&gt;= 0).+++

| <<y,`y`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Governor lag time constant (<i>Y</i>) (&gt; 0).+++

| <<z,`z`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Governor mode (<i>Z</i>).
1 = droop
0 = isochronous.+++

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#a]
=== `a`
+++Valve positioner (<i>A</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.a`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#af1]
=== `af1`
+++Exhaust temperature parameter (<i>Af1</i>).  Unit = PU temperature.  Based on temperature in degrees C.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.af1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#af2]
=== `af2`
+++Coefficient equal to 0,5(1-speed) (<i>Af2</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.af2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#b]
=== `b`
+++Valve positioner (<i>B</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.b`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#bf1]
=== `bf1`
+++(<i>Bf1</i>).  <i>Bf1</i> = <i>E</i>(1 - <i>W</i>) where <i>E</i> (speed sensitivity coefficient) is 0,55 to 0,65 x <i>Tr</i>.  Unit = PU temperature.  Based on temperature in degrees C.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.bf1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#bf2]
=== `bf2`
+++Turbine torque coefficient K<sub>hhv</sub> (depends on heating value of fuel stream in combustion chamber) (<i>Bf2</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.bf2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#c]
=== `c`
+++Valve positioner (<i>C</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.c`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#cf2]
=== `cf2`
+++Coefficient defining fuel flow where power output is 0% (<i>Cf2</i>).  Synchronous but no output.  Typically 0,23 x K<sub>hhv</sub> (23% fuel flow).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.cf2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ecr]
=== `ecr`
+++Combustion reaction time delay (<i>Ecr</i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.ecr`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#etd]
=== `etd`
+++Turbine and exhaust delay (<i>Etd</i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.etd`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#k3]
=== `k3`
+++Ratio of fuel adjustment (<i>K3</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.k3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#k4]
=== `k4`
+++Gain of radiation shield (<i>K4</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.k4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#k5]
=== `k5`
+++Gain of radiation shield (<i>K5</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.k5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#k6]
=== `k6`
+++Minimum fuel flow (<i>K6</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.k6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#kf]
=== `kf`
+++Fuel system feedback (<i>Kf</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.kf`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#t]
=== `t`
+++Fuel control time constant (<i>T</i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.t`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t3]
=== `t3`
+++Radiation shield time constant (<i>T3</i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.t3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t4]
=== `t4`
+++Thermocouple time constant (<i>T4</i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.t4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t5]
=== `t5`
+++Temperature control time constant (<i>T5</i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.t5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tc]
=== `tc`
+++Temperature control (<i>Tc</i>).  Unit = °F or °C depending on parameters <i>Af1</i> and <i>Bf1</i>.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.tc`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]


|===

//[discrete]
[#tcd]
=== `tcd`
+++Compressor discharge time constant (<i>Tcd</i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.tcd`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tf]
=== `tf`
+++Fuel system time constant (<i>Tf</i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.tf`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tmax]
=== `tmax`
+++Maximum turbine limit (<i>Tmax</i>) (&gt; GovGAST2.tmin).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.tmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#tmin]
=== `tmin`
+++Minimum turbine limit (<i>Tmin</i>) (&lt; GovGAST2.tmax).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.tmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#tr]
=== `tr`
+++Rated temperature (<i>Tr</i>).  Unit = °C depending on parameters<i> Af1 </i>and <i>Bf1</i>.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.tr`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]


|===

//[discrete]
[#trate]
=== `trate`
+++Turbine rating (<i>Trate</i>).  Unit = MW.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.trate`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#tt]
=== `tt`
+++Temperature controller integration rate (<i>Tt</i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.tt`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#w]
=== `w`
+++Governor gain (1/droop) on turbine rating (<i>W</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.w`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#x]
=== `x`
+++Governor lead time constant (<i>X</i>) (&gt;= 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.x`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#y]
=== `y`
+++Governor lag time constant (<i>Y</i>) (&gt; 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.y`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#z]
=== `z`
+++Governor mode (<i>Z</i>).
1 = droop
0 = isochronous.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.z`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===


