v1.1.0/modules/schema/pages/class/GovGAST2.adoc
= `GovGAST2`
:toclevels: 4


+++Gas turbine.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovGAST2`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovGAST2`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<a,`a`>>
//| [[slots_table.a]]<<a,`a`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Valve positioner (<i>A</i>).+++
| _n/a_

| <<af1,`af1`>>
//| [[slots_table.af1]]<<af1,`af1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Exhaust temperature parameter (<i>Af1</i>).  Unit = PU temperature.  Based on temperature in degrees C.+++
| _n/a_

| <<af2,`af2`>>
//| [[slots_table.af2]]<<af2,`af2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Coefficient equal to 0,5(1-speed) (<i>Af2</i>).+++
| _n/a_

| <<b,`b`>>
//| [[slots_table.b]]<<b,`b`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Valve positioner (<i>B</i>).+++
| _n/a_

| <<bf1,`bf1`>>
//| [[slots_table.bf1]]<<bf1,`bf1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++(<i>Bf1</i>).  <i>Bf1</i> = <i>E</i>(1 - <i>W</i>) where <i>E</i> (speed sensitivity coefficient) is 0,55 to 0,65 x...+++
| _n/a_

| <<bf2,`bf2`>>
//| [[slots_table.bf2]]<<bf2,`bf2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Turbine torque coefficient K<sub>hhv</sub> (depends on heating value of fuel stream in combustion chamber) (<i>Bf2</i>).+++
| _n/a_

| <<c,`c`>>
//| [[slots_table.c]]<<c,`c`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Valve positioner (<i>C</i>).+++
| _n/a_

| <<cf2,`cf2`>>
//| [[slots_table.cf2]]<<cf2,`cf2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Coefficient defining fuel flow where power output is 0% (<i>Cf2</i>).  Synchronous but no output.  Typically 0,23 x...+++
| _n/a_

| <<ecr,`ecr`>>
//| [[slots_table.ecr]]<<ecr,`ecr`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Combustion reaction time delay (<i>Ecr</i>) (&gt;= 0).+++
| _n/a_

| <<etd,`etd`>>
//| [[slots_table.etd]]<<etd,`etd`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Turbine and exhaust delay (<i>Etd</i>) (&gt;= 0).+++
| _n/a_

| <<k3,`k3`>>
//| [[slots_table.k3]]<<k3,`k3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Ratio of fuel adjustment (<i>K3</i>).+++
| _n/a_

| <<k4,`k4`>>
//| [[slots_table.k4]]<<k4,`k4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gain of radiation shield (<i>K4</i>).+++
| _n/a_

| <<k5,`k5`>>
//| [[slots_table.k5]]<<k5,`k5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Gain of radiation shield (<i>K5</i>).+++
| _n/a_

| <<k6,`k6`>>
//| [[slots_table.k6]]<<k6,`k6`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum fuel flow (<i>K6</i>).+++
| _n/a_

| <<kf,`kf`>>
//| [[slots_table.kf]]<<kf,`kf`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Fuel system feedback (<i>Kf</i>).+++
| _n/a_

| <<mwbase,`mwbase`>>
//| [[slots_table.mwbase]]<<mwbase,`mwbase`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++
| _n/a_

| <<t,`t`>>
//| [[slots_table.t]]<<t,`t`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Fuel control time constant (<i>T</i>) (&gt;= 0).+++
| _n/a_

| <<t3,`t3`>>
//| [[slots_table.t3]]<<t3,`t3`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Radiation shield time constant (<i>T3</i>) (&gt;= 0).+++
| _n/a_

| <<t4,`t4`>>
//| [[slots_table.t4]]<<t4,`t4`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Thermocouple time constant (<i>T4</i>) (&gt;= 0).+++
| _n/a_

| <<t5,`t5`>>
//| [[slots_table.t5]]<<t5,`t5`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Temperature control time constant (<i>T5</i>) (&gt;= 0).+++
| _n/a_

| <<tc,`tc`>>
//| [[slots_table.tc]]<<tc,`tc`>>
| 0..1 +
xref::class/Temperature.adoc[`Temperature`]
| +++Temperature control (<i>Tc</i>).  Unit = °F or °C depending on parameters <i>Af1</i> and <i>Bf1</i>.+++
| _n/a_

| <<tcd,`tcd`>>
//| [[slots_table.tcd]]<<tcd,`tcd`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Compressor discharge time constant (<i>Tcd</i>) (&gt;= 0).+++
| _n/a_

| <<tf,`tf`>>
//| [[slots_table.tf]]<<tf,`tf`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Fuel system time constant (<i>Tf</i>) (&gt;= 0).+++
| _n/a_

| <<tmax,`tmax`>>
//| [[slots_table.tmax]]<<tmax,`tmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum turbine limit (<i>Tmax</i>) (&gt; GovGAST2.tmin).+++
| _n/a_

| <<tmin,`tmin`>>
//| [[slots_table.tmin]]<<tmin,`tmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum turbine limit (<i>Tmin</i>) (&lt; GovGAST2.tmax).+++
| _n/a_

| <<tr,`tr`>>
//| [[slots_table.tr]]<<tr,`tr`>>
| 0..1 +
xref::class/Temperature.adoc[`Temperature`]
| +++Rated temperature (<i>Tr</i>).  Unit = °C depending on parameters<i> Af1 </i>and <i>Bf1</i>.+++
| _n/a_

| <<trate,`trate`>>
//| [[slots_table.trate]]<<trate,`trate`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Turbine rating (<i>Trate</i>).  Unit = MW.+++
| _n/a_

| <<tt,`tt`>>
//| [[slots_table.tt]]<<tt,`tt`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Temperature controller integration rate (<i>Tt</i>) (&gt;= 0).+++
| _n/a_

| <<w,`w`>>
//| [[slots_table.w]]<<w,`w`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Governor gain (1/droop) on turbine rating (<i>W</i>).+++
| _n/a_

| <<x,`x`>>
//| [[slots_table.x]]<<x,`x`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Governor lead time constant (<i>X</i>) (&gt;= 0).+++
| _n/a_

| <<y,`y`>>
//| [[slots_table.y]]<<y,`y`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Governor lag time constant (<i>Y</i>) (&gt; 0).+++
| _n/a_

| <<z,`z`>>
//| [[slots_table.z]]<<z,`z`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Governor mode (<i>Z</i>).
1 = droop
0 = isochronous.+++
| _n/a_

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
//| [[slots_table.AsynchronousMachineDynamics]]<<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1 +
xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
//| [[slots_table.TurbineLoadControllerDynamics]]<<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1 +
xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#a]
=== `a`
+++Valve positioner (<i>A</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.a`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.a,&#10548;>>
--
////


//[discrete]
[#af1]
=== `af1`
+++Exhaust temperature parameter (<i>Af1</i>).  Unit = PU temperature.  Based on temperature in degrees C.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.af1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.af1,&#10548;>>
--
////


//[discrete]
[#af2]
=== `af2`
+++Coefficient equal to 0,5(1-speed) (<i>Af2</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.af2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.af2,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.AsynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#b]
=== `b`
+++Valve positioner (<i>B</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.b`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.b,&#10548;>>
--
////


//[discrete]
[#bf1]
=== `bf1`
+++(<i>Bf1</i>).  <i>Bf1</i> = <i>E</i>(1 - <i>W</i>) where <i>E</i> (speed sensitivity coefficient) is 0,55 to 0,65 x <i>Tr</i>.  Unit = PU temperature.  Based on temperature in degrees C.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.bf1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.bf1,&#10548;>>
--
////


//[discrete]
[#bf2]
=== `bf2`
+++Turbine torque coefficient K<sub>hhv</sub> (depends on heating value of fuel stream in combustion chamber) (<i>Bf2</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.bf2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.bf2,&#10548;>>
--
////


//[discrete]
[#c]
=== `c`
+++Valve positioner (<i>C</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.c`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.c,&#10548;>>
--
////


//[discrete]
[#cf2]
=== `cf2`
+++Coefficient defining fuel flow where power output is 0% (<i>Cf2</i>).  Synchronous but no output.  Typically 0,23 x K<sub>hhv</sub> (23% fuel flow).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.cf2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.cf2,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#ecr]
=== `ecr`
+++Combustion reaction time delay (<i>Ecr</i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.ecr`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.ecr,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#etd]
=== `etd`
+++Turbine and exhaust delay (<i>Etd</i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.etd`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.etd,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#k3]
=== `k3`
+++Ratio of fuel adjustment (<i>K3</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.k3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k3,&#10548;>>
--
////


//[discrete]
[#k4]
=== `k4`
+++Gain of radiation shield (<i>K4</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.k4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k4,&#10548;>>
--
////


//[discrete]
[#k5]
=== `k5`
+++Gain of radiation shield (<i>K5</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.k5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k5,&#10548;>>
--
////


//[discrete]
[#k6]
=== `k6`
+++Minimum fuel flow (<i>K6</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.k6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.k6,&#10548;>>
--
////


//[discrete]
[#kf]
=== `kf`
+++Fuel system feedback (<i>Kf</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.kf`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kf,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.mwbase,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#t]
=== `t`
+++Fuel control time constant (<i>T</i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.t`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t,&#10548;>>
--
////


//[discrete]
[#t3]
=== `t3`
+++Radiation shield time constant (<i>T3</i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.t3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t3,&#10548;>>
--
////


//[discrete]
[#t4]
=== `t4`
+++Thermocouple time constant (<i>T4</i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.t4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t4,&#10548;>>
--
////


//[discrete]
[#t5]
=== `t5`
+++Temperature control time constant (<i>T5</i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.t5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t5,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tc]
=== `tc`
+++Temperature control (<i>Tc</i>).  Unit = °F or °C depending on parameters <i>Af1</i> and <i>Bf1</i>.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.tc`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]


|===

////
[.text-left]
--
<<slots_table.tc,&#10548;>>
--
////


//[discrete]
[#tcd]
=== `tcd`
+++Compressor discharge time constant (<i>Tcd</i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.tcd`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tcd,&#10548;>>
--
////


//[discrete]
[#tf]
=== `tf`
+++Fuel system time constant (<i>Tf</i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.tf`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tf,&#10548;>>
--
////


//[discrete]
[#tmax]
=== `tmax`
+++Maximum turbine limit (<i>Tmax</i>) (&gt; GovGAST2.tmin).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.tmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.tmax,&#10548;>>
--
////


//[discrete]
[#tmin]
=== `tmin`
+++Minimum turbine limit (<i>Tmin</i>) (&lt; GovGAST2.tmax).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.tmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.tmin,&#10548;>>
--
////


//[discrete]
[#tr]
=== `tr`
+++Rated temperature (<i>Tr</i>).  Unit = °C depending on parameters<i> Af1 </i>and <i>Bf1</i>.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.tr`
| Cardinality
| 0..1
| Type
| xref::class/Temperature.adoc[`Temperature`]


|===

////
[.text-left]
--
<<slots_table.tr,&#10548;>>
--
////


//[discrete]
[#trate]
=== `trate`
+++Turbine rating (<i>Trate</i>).  Unit = MW.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.trate`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.trate,&#10548;>>
--
////


//[discrete]
[#tt]
=== `tt`
+++Temperature controller integration rate (<i>Tt</i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.tt`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tt,&#10548;>>
--
////


//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.TurbineLoadControllerDynamics,&#10548;>>
--
////


//[discrete]
[#w]
=== `w`
+++Governor gain (1/droop) on turbine rating (<i>W</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.w`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.w,&#10548;>>
--
////


//[discrete]
[#x]
=== `x`
+++Governor lead time constant (<i>X</i>) (&gt;= 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.x`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.x,&#10548;>>
--
////


//[discrete]
[#y]
=== `y`
+++Governor lag time constant (<i>Y</i>) (&gt; 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.y`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.y,&#10548;>>
--
////


//[discrete]
[#z]
=== `z`
+++Governor mode (<i>Z</i>).
1 = droop
0 = isochronous.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST2.z`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

////
[.text-left]
--
<<slots_table.z,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
